mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v15__test__v15_to_v16_migration_good_entry_location_not_replaced.snap
---
source: mullvad-daemon/src/migrations/v15.rs
expression: "serde_json::to_string_pretty(&old_settings).unwrap()"
---
{
  "relay_settings": {
    "normal": {
      "wireguard_constraints": {
        "entry_location": {
          "only": {
            "location": {
              "country": "se"
            }
          }
        }
      }
    }
  }
}
